--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.59.10",
     "react-native-admob": "2.0.0-beta.5",
     "react-native-app-intro-slider": "^1.0.1",
+    "react-native-elements": "^3.0.0-alpha.1",
     "react-native-facebook-login": "1.6.1",
     "react-native-fast-image": "6.0.3",
     "react-native-fs": "^2.13.3",
@@ -44,6 +45,7 @@
     "react-native-toast-native": "^1.2.1",
     "react-native-track-player": "1.1.8",
     "react-native-typing-text": "0.0.3",
+    "react-native-vector-icons": "^7.1.0",
     "react-navigation": "^3.0.4",
     "react-redux": "^5.0.7",
     "react-timeago": "^4.1.9",
