--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@monterosa/react-native-parallax-scroll": "^1.8.0",
     "assign-deep": "^1.0.0",
     "eventing-bus": "^1.3.3",
+    "expo-linear-gradient": "^8.3.1",
     "frisbee": "^2.0.5",
     "immutability-helper": "^2.8.1",
     "lodash": "^4.17.11",
@@ -27,6 +28,7 @@
     "react-native-i18n": "^2.0.15",
     "react-native-image-crop-picker": "^0.20.3",
     "react-native-in-app-utils": "^6.0.1",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-localization": "^2.0.3",
     "react-native-material-dialog": "^0.7.6",
