--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-loading-spinner-overlay": "^0.5.2",
     "react-native-localization": "^2.0.3",
     "react-native-material-dialog": "^0.7.6",
+    "react-native-media-controls": "^2.3.0",
     "react-native-modal": "^7.0.2",
     "react-native-music-control": "^0.7.3",
     "react-native-music-player-service": "^0.1.4-beta",
@@ -43,11 +44,13 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-super-grid": "3.1.1",
     "react-native-swift": "^1.2.2",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-swiper": "^1.5.14",
     "react-native-toast-native": "^1.2.1",
     "react-native-track-player": "1.1.8",
     "react-native-typing-text": "0.0.3",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-video": "^5.1.1",
     "react-navigation": "^3.0.4",
     "react-redux": "^5.0.7",
     "react-timeago": "^4.1.9",
